src/components/articles/articles.module.css
.articles
{
    display: flex;
    flex-direction: column;
    width: 100%;
    padding-bottom: 100px;
}

.articles_theme_black
{
    composes: articles;
    background-color: #000;
}

.article
{
    display: flex;
    flex-direction: column;
    margin: 30px auto 0;
    width: 50%;
    animation: slide-up .4s forwards ease;
}

.article__titleLink
{
    color: #000;
    text-decoration: none;
}

.article__titleLink_color_white
{
    color: #fff;
    text-decoration: none;
}

.article__titleLink:hover,
.article__titleLink_color_white:hover
{
    text-decoration: underline;
}

@keyframes slide-up {
    0% {
        opacity: 0;
        transform: translateY(50px);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

